Closed Bug 1669495 Opened 5 years ago Closed 5 years ago

[wayland] [hidpi] tooltips sometimes are split to 2 lines while they should not

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: jhorak, Assigned: jhorak)

Details

Attachments

(1 file)

Tooltips are split to two lines sometimes when the hidpi display and/or font-scaling != 1.0 is present.

The tooltip width can be real number in the hidpi display setup
or when the font scaling is used. In this case the nsWindow GTK
implementation will cut out the non integer part which leads to
narrowing the tooltip and later overflowing the text which
is in the tooltip to next line. This workaround patch adds
a one pixel to the tooltip frame when the tooltip has real number
width or height.

Assignee: nobody → jhorak
Status: NEW → ASSIGNED
Pushed by nbeleuzu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a14a6dc39ade Fix wrong tooltips sizes on wayland and hidpi displays;r=stransky
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: