Bug 1669495 Fix wrong tooltips sizes on wayland and hidpi displays;r=stransky

The tooltip width can be real number in the hidpi display setup
or when the font scaling is used. In this case the nsWindow GTK
implementation will cut out the non integer part which leads to
narrowing the tooltip and later overflowing the text which
is in the tooltip to next line. This workaround patch adds
a one pixel to the tooltip frame when the tooltip has real number
width or height.

Differential Revision: https://phabricator.services.mozilla.com/D92620